@@ -77,6 +77,7 @@
           <LI><A HREF="configure.html#templates">Configuration Files for Other Applications</A></LI>
           <LI><A HREF="configure.html#customui">Customizing the Web User Interface</A></LI>
           <LI><A HREF="configure.html#customsimpleitem">Customizing the Simple Item Display Metadata</A></LI>
+          <li><a href="configure.html#mydspacegroupmembership">MyDSpace Display of Group Memberships</li>
           <LI><A HREF="configure.html#authenticate">Custom Authentication Code</A></LI>
           <LI><A HREF="configure.html#ldap">Configuring LDAP Authentication</A></LI>
           <LI><A HREF="configure.html#search-index">Configuring Lucene Search Indexes</A></LI>
